[ER]Save config file for firebase

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -35,3 +35,9 @@
   margin-top: 1px;
   margin-right: 2px;
 }
+
+.sidebar > hr {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #49274b;
+}
